.provarCaches/00D5f000005vwGkEAI/objects/rstkf__appayselectaudit__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_appayselectaudit</customHelpPage>
    <description>appayselectaudit__c</description>
    <fields>
        <fullName>rstkf__appayselectaudit_apusrno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AP User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Payment Selection Audits</relationshipLabel>
        <relationshipName>appayselectaudits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_bank_select_opt__c</fullName>
        <label>Bank Selection Option</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_bankacct_curr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bank Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Payment Selection Audits</relationshipLabel>
        <relationshipName>appayselectaudits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_bankacct_number__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bank Account Number</label>
        <referenceTo>rstkf__glbankacct__c</referenceTo>
        <relationshipLabel>Payment Selection Audits</relationshipLabel>
        <relationshipName>appayselectaudits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_check_batch_comments__c</fullName>
        <label>Check Batch Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_checkrunverifyind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verify Check Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_cmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Payment Selection Audits</relationshipLabel>
        <relationshipName>appayselectaudits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_completetime__c</fullName>
        <label>Complete  Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_curpdf_numb__c</fullName>
        <label>Current PDF Print Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_date_select_opt__c</fullName>
        <label>Date Selection Option</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_datetime_pdfprint__c</fullName>
        <label>Date/Time PDF Printed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_firstchecknumber__c</fullName>
        <label>First Check Number Printed</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_genremitadvice_ind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Remittance Advice Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_lstchecknumber__c</fullName>
        <label>Last Check Number Printed</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_lstreqrptnumb__c</fullName>
        <label>Last Cash Requirements Report Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_mode__c</fullName>
        <label>Mode</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_next_checkrun_date__c</fullName>
        <label>Next Check Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_pay_check_ind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pay by Checks Method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_pay_eft_ind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pay by EFT Method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_paybills_suspendtime__c</fullName>
        <label>Pay Bills Suspend Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_payment_date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_printchecks_suspendtime__c</fullName>
        <label>Print Checks Suspend Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_select_hold_opt__c</fullName>
        <label>Select Hold Option</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_session__c</fullName>
        <label>Session</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_suspendtime__c</fullName>
        <label>Suspend Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_take_termsdiscount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Take Advantage of Terms Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_terminatetime__c</fullName>
        <label>Terminate  Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_terminateusrno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Terminate User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Payment Selection Audits (Terminate User)</relationshipLabel>
        <relationshipName>appayselectaudits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_totnetpayhome__c</fullName>
        <label>Total Payment of Check Run(HomeCurrency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_usrno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Payment Selection Audits (User)</relationshipLabel>
        <relationshipName>appayselectaudits2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_vend_select_opt__c</fullName>
        <label>Vendor Selection Option</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__appayselectaudit_vendor_credit_applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor Credits Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>TEXT(rstkf__appayselectaudit_session__c) + &apos;(&apos; +  TEXT(CreatedDate)  + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__searchindex__c</fullName>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Payment Selection Audit</label>
    <listViews>
        <fullName>rstkf__RS_Payment_Selection_Audits</fullName>
        <columns>NAME</columns>
        <columns>rstkf__appayselectaudit_cmpno__c</columns>
        <columns>rstkf__appayselectaudit_bankacct_number__c</columns>
        <columns>rstkf__appayselectaudit_vendor_credit_applied__c</columns>
        <columns>rstkf__appayselectaudit_completetime__c</columns>
        <columns>rstkf__appayselectaudit_suspendtime__c</columns>
        <columns>rstkf__appayselectaudit_terminatetime__c</columns>
        <columns>rstkf__appayselectaudit_firstchecknumber__c</columns>
        <columns>rstkf__appayselectaudit_lstchecknumber__c</columns>
        <columns>rstkf__appayselectaudit_paybills_suspendtime__c</columns>
        <columns>rstkf__appayselectaudit_next_checkrun_date__c</columns>
        <columns>rstkf__appayselectaudit_payment_date__c</columns>
        <columns>rstkf__appayselectaudit_totnetpayhome__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Payment Selection Audits</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Selection Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>